feat: time_complexity_build added

--- a/docs/sections/mainmatter/time_complexity/time_complexity_build.tex
+++ b/docs/sections/mainmatter/time_complexity/time_complexity_build.tex
@@ -1,1 +1,13 @@
 \chapter{Complejidad}
+
+% algorithm performance
+\input{sections/mainmatter/time_complexity/cases}
+
+% loop invariant
+\input{sections/mainmatter/time_complexity/loop_invariant}
+
+% asymptotic analysis
+\input{sections/mainmatter/time_complexity/asymptotic_analysis}
+
+% master theorem
+\input{sections/mainmatter/time_complexity/master_theorem}
