fix: some modifications in preamble chapterstyle and amsmath package added

--- a/docs/preamble.tex
+++ b/docs/preamble.tex
@@ -3,6 +3,7 @@
 \pdfgentounicode=1
 \usepackage[spanish]{babel}
 \usepackage{fourier}
+\usepackage{amsmath}
 \usepackage{csquotes}
 \usepackage[colorlinks, urlcolor=blue]{hyperref}
 \usepackage{fancyhdr}
@@ -26,7 +27,7 @@
 
 \renewcommand{\footrulewidth}{0.4pt}
 
-\chapterstyle{dash}
+\chapterstyle{section}
 
 %%%%% commands %%%%%%
 
