--- a/docs/main.tex
+++ b/docs/main.tex
@@ -9,6 +9,8 @@
 \newpage
 \tableofcontents
 
+\include{sections/mainmatter/basics/basics_build}
+\include{sections/mainmatter/advice/advice_build}
 \include{sections/mainmatter/time_complexity/time_complexity_build}
 \include{sections/mainmatter/data_structures/data_structures_build}
 \include{sections/mainmatter/algorithm_library/algorithm_library_build}
