feat(dynamic_programming): Notas en .tex

--- a/docs/sections/mainmatter/dynamic_programming/dynamic_programming_build.tex
+++ b/docs/sections/mainmatter/dynamic_programming/dynamic_programming_build.tex
@@ -1,1 +1,9 @@
 \chapter{Programación dinámica}
+
+Programación dinamica es una forma de resolver algoritmos para optimizar los recursos recursivos de un problema.
+
+La idea principal de DP (dynamic programming) es intentar memorizar estados previos para no tener que
+calcularnos nuevamente en cada iteración.
+
+\input{sections/mainmatter/dynamic_programming/dp_approach}
+\input{sections/mainmatter/dynamic_programming/problems}
