feat(data-structures): Documentación en tex

--- a/docs/sections/mainmatter/data_structures/data_structures_build.tex
+++ b/docs/sections/mainmatter/data_structures/data_structures_build.tex
@@ -1,1 +1,10 @@
 \chapter{Estructuras de datos}
+
+\input{sections/mainmatter/data_structures/vector.tex}
+\input{sections/mainmatter/data_structures/stack.tex}
+\input{sections/mainmatter/data_structures/queue.tex}
+\input{sections/mainmatter/data_structures/priority_queue.tex}
+\input{sections/mainmatter/data_structures/set.tex}
+\input{sections/mainmatter/data_structures/map.tex}
+\input{sections/mainmatter/data_structures/disjoint_union_set.tex}
+\input{sections/mainmatter/data_structures/grafo_adyacente.tex}
