fix(latex): Errores de consistencia para ser mas legible

--- a/docs/sections/mainmatter/data_structures/data_structures_build.tex
+++ b/docs/sections/mainmatter/data_structures/data_structures_build.tex
@@ -1,10 +1,18 @@
 \chapter{Estructuras de datos}
 
 \input{sections/mainmatter/data_structures/vector.tex}
+\newpage
 \input{sections/mainmatter/data_structures/stack.tex}
+\newpage
 \input{sections/mainmatter/data_structures/queue.tex}
+\newpage
 \input{sections/mainmatter/data_structures/priority_queue.tex}
+\newpage
 \input{sections/mainmatter/data_structures/set.tex}
+\newpage
 \input{sections/mainmatter/data_structures/map.tex}
+\newpage
 \input{sections/mainmatter/data_structures/disjoint_union_set.tex}
+\newpage
 \input{sections/mainmatter/data_structures/grafo_adyacente.tex}
+\newpage
