--- a/docs/sections/mainmatter/graphs/graphs_build.tex
+++ b/docs/sections/mainmatter/graphs/graphs_build.tex
@@ -1,1 +1,8 @@
 \chapter{Grafos}
+
+Los grafos son estructuras de datos que permiten conectar nodos y caminos.
+
+\input{sections/mainmatter/graphs/graph_implementation}
+\input{sections/mainmatter/graphs/graph_DFS}
+\input{sections/mainmatter/graphs/graph_BFS}
+\input{sections/mainmatter/graphs/graph_MST}
