feat(docs/greedy): Greedy eliminado por tamaño

--- a/docs/sections/mainmatter/greedy/greedy_build.tex
+++ b/docs/sections/mainmatter/greedy/greedy_build.tex
@@ -1,4 +1,5 @@
 \chapter{Algoritmos Greedy}
 
+Mas que otra cosa, los algoritmos greedy es como se te ocurre finalmente el ejercicio.
 
-\input{sections/mainmatter/greedy/problems}
+Intentar evitar.\input{sections/mainmatter/greedy/problems}
