fix(docs/greedy): Greedy correcto

--- a/docs/sections/mainmatter/greedy/greedy_build.tex
+++ b/docs/sections/mainmatter/greedy/greedy_build.tex
@@ -2,4 +2,4 @@
 
 Mas que otra cosa, los algoritmos greedy es como se te ocurre finalmente el ejercicio.
 
-Intentar evitar.\input{sections/mainmatter/greedy/problems}
+Intentar evitar.
